--- a/.github/workflows/generate-friwrt-amlogic.yml
+++ b/.github/workflows/generate-friwrt-amlogic.yml
@@ -18,19 +18,23 @@ on:
       release_branch:
         description: "Select the release branch:"
         required: true
-        default: "openwrt:23.05.3"
+        default: "openwrt:23.05.5"
         type: choice
         options:
           - openwrt:21.02.7
           - openwrt:23.05.2
           - openwrt:23.05.3
+          - openwrt:23.05.4
+          - openwrt:23.05.5
           - immortalwrt:21.02.7
           - immortalwrt:23.05.1
           - immortalwrt:23.05.2
+          - immortalwrt:23.05.3
+          - immortalwrt:23.05.4
       target:
         description: "Select device board"
         required: false
-        default: "hg680p"
+        default: "b860h"
         type: choice
         options:
           - all
@@ -40,15 +44,16 @@ on:
       openwrt_kernel:
         description: "Select kernel version"
         required: false
-        default: "5.15.1_6.1.1"
+        default: "5.15.1_6.6.5"
         type: choice
         options:
           - 5.4.1_5.10.1
-          - 5.15.1_6.1.1
+          - 5.15.1_6.6.5
           - 5.4.1
           - 5.10.1
           - 5.15.1
           - 6.1.1
+          - 6.6.5
       auto_kernel:
         description: "Auto use the latest kernel"
         required: false
@@ -74,7 +79,7 @@ on:
       tunnel:
         description: "Select VPN Client app (!neko and passwall only support for newer branch with fw4 firewall!):"
         required: true
-        default: "openclash"
+        default: all"
         type: choice
         options:
           - all
